<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestGA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="btn_start_activity">Start Activity</string>
    <string name="btn_crash">Crash</string>
    <string name="btn_exception">Exception</string>
    <string name="title_start_activity">Show another activity</string>
    <string name="title_crash_exception">Crash &amp; Exception</string>
    <string name="title_events">Events</string>
    <string name="btn_cat1_event1">Cat1-Event1</string>
    <string name="btn_cat1_event2">Cat1-Event2</string>
    <string name="btn_cat2_event1">Cat2-Event1</string>
    <string name="btn_cat2_event2">Cat2-Event2</string>
    <string name="text_sub_activity">SubActivity</string>

</resources>
